--- a/updis/wizard/fuzerenqidong.xml
+++ b/updis/wizard/fuzerenqidong.xml
@@ -17,10 +17,10 @@
 						<field name="shizhengxietiaoren_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
 						<field name="project_assignment_ids" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
 					</group>
-					<group string="通知设置">
+					<!-- <group string="通知设置">
 						<field name="send_email" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
 						<field name="send_sms" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-					</group>
+					</group> -->
 					<group string="Review Comment">
 						<field name="review_log" />
 						<field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_jingyingshi)d)]"  attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
