--- a/updis/wizard/suozhangshenpi.xml
+++ b/updis/wizard/suozhangshenpi.xml
@@ -36,10 +36,10 @@
 						<field name="xieyicaoan" attrs="{'readonly':[('state','=','draft')]}" />		
 						<field name="koutouyaoqiujilu" attrs="{'readonly':[('state','=','draft')]}" />
 					</group>
-					<group string="通知设置">
+					<!-- <group string="通知设置">
 						<field name="send_email" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
 						<field name="send_sms" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-					</group>
+					</group> -->
 					<group string="Review Comment">
 						<field name="review_log" />
 						<field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_suozhang)d)]"  attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
