--- a/updis/static/src/css/style.css
+++ b/updis/static/src/css/style.css
@@ -94,7 +94,7 @@ Stylesheet Guide
 /* 01. GLOBAL
 /* *********************************************************************************** */
 
-* {font-size: 100.01%;}
+* {font-size: 9pt;}
 html {font-size: 62.5%;margin:0;padding:0;}
 body {margin:0;background:#f4f4f2;font:1.2em/19px "helvetica neue",Helvetica,Arial,Verdana,sans-serif;color:#666;min-width:1003px;}
 
