--- a/updis/static/src/css/internal-home.css
+++ b/updis/static/src/css/internal-home.css
@@ -1,5 +1,5 @@
 .openerp {
-	font-family: "Microsoft YaHei", "Lucida Grande", Helvetica, Verdana, Arial, sans-serif;
+	font-family: "宋体","Microsoft YaHei", "Lucida Grande", Helvetica, Verdana, Arial, sans-serif;
 	font-size: 100%;
 	text-shadow:none;
 }
