--- a/updis/static/src/css/updis.css
+++ b/updis/static/src/css/updis.css
@@ -32,3 +32,24 @@
 	background-image: -o-linear-gradient(top, #4E656A, #4C4C4C);
 	background-image: linear-gradient(to bottom, #4E656A, #4C4C4C);
 }
+
+.openerp.ui-dialog .oe_about .oe_bottom {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-shadow: 0 1px 1px #999999;
+    background-color: #4E656A;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#4E656A), to(#4C4C4C));
+    background-image: -webkit-linear-gradient(top, #4E656A, #4C4C4C);
+    background-image: -moz-linear-gradient(top, #4E656A, #4C4C4C);
+    background-image: -ms-linear-gradient(top, #4E656A, #4C4C4C);
+    background-image: -o-linear-gradient(top, #4E656A, #4C4C4C);
+    background-image: linear-gradient(to bottom, #4E656A, #4C4C4C);
+    color: #eeeeee;
+    padding: 0 16px;
+    -moz-border-radius: 0 0 2px 2px;
+    -webkit-border-radius: 0 0 2px 2px;
+    border-radius: 0 0 2px 2px;
+}
