--- a/updis/static/src/css/updis.css
+++ b/updis/static/src/css/updis.css
@@ -55,3 +55,14 @@
     -webkit-border-radius: 0 0 2px 2px;
     border-radius: 0 0 2px 2px;
 }
+
+.openerp .oe_topbar_item.oe_topbar_compose_full_email{
+    display: none;
+    padding: 0px;
+    width: 32px;
+    height: 32px;
+}
+
+.openerp .oe_dropdown_menu {
+    z-index: 80;
+}
