UPDIS-231 - 项目管理模块的归正

--- a/up_project/wizard/suozhangshenpi_workflow.xml
+++ b/up_project/wizard/suozhangshenpi_workflow.xml
@@ -1,58 +1,59 @@
 <?xml version="1.0"?>
 <openerp>
-	<data>
-		<record model="workflow" id="wkf_project_review_suozhangshenpi_form">
-			<field name="name">项目启动所长审批流程</field>
-			<field name="osv">project.review.suozhangshenpi.form</field>
-			<field name="on_create">True</field>
-		</record>
-		<!-- Activities -->
-		<record id="act_suozhangshenpi_draft" model="workflow.activity">
-			<field name="wkf_id" ref="wkf_project_review_suozhangshenpi_form" />
-			<field name="name">draft</field>
-			<field name="flow_start">True</field>
-			<field name="kind">function</field>
-			<field name="action">update_project_suozhangshenpi_form()</field>
-		</record>
-		<record id="act_suozhangshenpi_submitted" model="workflow.activity">
-			<field name="wkf_id" ref="wkf_project_review_suozhangshenpi_form" />
-			<field name="name">Submitted</field>
-			<field name="action_id" ref="suozhangshenpi_multi_submitted"/>
-			<field name="kind">function</field>
-			<field name="action">write({'state':'submitted'})</field>
-		</record>
-		<record id="act_suozhangshenpi_accepted" model="workflow.activity">
-			<field name="wkf_id" ref="wkf_project_review_suozhangshenpi_form" />
-			<field name="name">Accepted</field>
-			<field name="flow_stop">True</field>
-			<field name="kind">function</field>
-			<field name="action_id" ref="suozhangshenpi_multi_accepted"/>
-			<field name="action">write({'state':'accepted'})</field>
-		</record>
-		<record id="act_suozhangshenpi_rejected" model="workflow.activity">
-			<field name="wkf_id" ref="wkf_project_review_suozhangshenpi_form" />
-			<field name="name">Rejected</field>
-			<field name="flow_stop">True</field>
-			<field name="kind">function</field>
-			<field name="action">write({'state':'rejected'})
-copy_rejected(default={'state':'draft'})</field>
-		</record>
-		<!-- Transitions -->
-		<record id="trans_suozhenshenpi_1" model="workflow.transition">
-			<field name="act_from" ref="act_suozhangshenpi_draft"/>
-			<field name="act_to" ref="act_suozhangshenpi_submitted"/>
-			<field name="signal">suozhangshenpi_review_submit</field>
-		</record>
-		<record id="trans_suozhenshenpi_2" model="workflow.transition">
-			<field name="act_from" ref="act_suozhangshenpi_submitted"/>
-			<field name="act_to" ref="act_suozhangshenpi_accepted"/>
-			<field name="signal">suozhangshenpi_review_accept</field>
-		</record>
-		<record id="trans_suozhenshenpi_3" model="workflow.transition">
-			<field name="act_from" ref="act_suozhangshenpi_submitted"/>
-			<field name="act_to" ref="act_suozhangshenpi_rejected"/>
-			<field name="signal">suozhangshenpi_review_reject</field>
-		</record>
+    <data>
+        <record model="workflow" id="wkf_project_review_suozhangshenpi_form">
+            <field name="name">项目启动所长审批流程</field>
+            <field name="osv">project.review.suozhangshenpi.form</field>
+            <field name="on_create">True</field>
+        </record>
+        <!-- Activities -->
+        <record id="act_suozhangshenpi_draft" model="workflow.activity">
+            <field name="wkf_id" ref="wkf_project_review_suozhangshenpi_form"/>
+            <field name="name">draft</field>
+            <field name="flow_start">True</field>
+            <field name="kind">function</field>
+            <field name="action">update_project_suozhangshenpi_form()</field>
+        </record>
+        <record id="act_suozhangshenpi_submitted" model="workflow.activity">
+            <field name="wkf_id" ref="wkf_project_review_suozhangshenpi_form"/>
+            <field name="name">submitted</field>
+            <field name="action_id" ref="suozhangshenpi_multi_submitted"/>
+            <field name="kind">function</field>
+            <field name="action">write({'state':'submitted'})</field>
+        </record>
+        <record id="act_suozhangshenpi_accepted" model="workflow.activity">
+            <field name="wkf_id" ref="wkf_project_review_suozhangshenpi_form"/>
+            <field name="name">accepted</field>
+            <field name="flow_stop">True</field>
+            <field name="kind">function</field>
+            <field name="action_id" ref="suozhangshenpi_multi_accepted"/>
+            <field name="action">write({'state':'accepted'})</field>
+        </record>
+        <record id="act_suozhangshenpi_rejected" model="workflow.activity">
+            <field name="wkf_id" ref="wkf_project_review_suozhangshenpi_form"/>
+            <field name="name">rejected</field>
+            <field name="flow_stop">True</field>
+            <field name="kind">function</field>
+            <field name="action">write({'state':'rejected'})
+                copy_rejected(default={'state':'draft'})
+            </field>
+        </record>
+        <!-- Transitions -->
+        <record id="trans_suozhenshenpi_1" model="workflow.transition">
+            <field name="act_from" ref="act_suozhangshenpi_draft"/>
+            <field name="act_to" ref="act_suozhangshenpi_submitted"/>
+            <field name="signal">suozhangshenpi_review_submit</field>
+        </record>
+        <record id="trans_suozhenshenpi_2" model="workflow.transition">
+            <field name="act_from" ref="act_suozhangshenpi_submitted"/>
+            <field name="act_to" ref="act_suozhangshenpi_accepted"/>
+            <field name="signal">suozhangshenpi_review_accept</field>
+        </record>
+        <record id="trans_suozhenshenpi_3" model="workflow.transition">
+            <field name="act_from" ref="act_suozhangshenpi_submitted"/>
+            <field name="act_to" ref="act_suozhangshenpi_rejected"/>
+            <field name="signal">suozhangshenpi_review_reject</field>
+        </record>
 
-	</data>
+    </data>
 </openerp>
