--- a/up_project/wizard/suozhangshenpi.xml
+++ b/up_project/wizard/suozhangshenpi.xml
@@ -1,131 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
-	<data>
-		<record id="project_review_suozhangshenpi_form_form_view" model="ir.ui.view">			
-			<field name="name">project.review.suozhangshenpi.form.view</field>
-			<field name="model">project.review.suozhangshenpi.form</field>
-			<field name="arch" type="xml">
-				<form string="suozhangshenpi" version="7.0">
-					<field name="state" widget="statusbar" readonly="1" statusbar_visible="submitted,draft"/>
-					<group string="基本信息" col="4">
-						<field name="guimo" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-						<field name="jianyishejibumen_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-						<field name="jianyixiangmufuzeren_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-						<field name="jiafang_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="waibao" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-						<field name="shizhenpeitao" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-						<field name="duofanghetong" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>						
-						<field name="shifoutoubiao" on_change="onchange_shifoutoubiao(shifoutoubiao)" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="toubiaoleibie" attrs="{'readonly':[('state','&lt;&gt;','draft')],'invisible':[('shifoutoubiao','=',False)]}"/>	
-					</group>
-					<group string="项目内容" col="4">						
-						<field name="yaoqiuxingchengwenjian" attrs="{'readonly':[('state','=','draft')]}"/>	
-						<field name="yinhanyaoqiu" attrs="{'readonly':[('state','=','draft')]}"/>	
-						<field name="difangfagui" attrs="{'readonly':[('state','=','draft')]}"/>		
-						<field name="fujiayaoqiu" attrs="{'readonly':[('state','=','draft')]}"/>		
-						<field name="hetongyizhi" attrs="{'readonly':[('state','=','draft')]}"/>	
-						<field name="ziyuan" attrs="{'readonly':[('state','=','draft')]}"/>		
-						<field name="shebei" attrs="{'readonly':[('state','=','draft')]}"/>		
-						<field name="gongqi" attrs="{'readonly':[('state','=','draft')]}"/>		
-						<field name="shejifei" attrs="{'readonly':[('state','=','draft')]}"/>	
-					</group>
-					<group string="明示要求" col="4">
-						<!-- 明示要求 -->
-						<field name="zhaobiaoshu" attrs="{'readonly':[('state','=','draft')]}" />		
-						<field name="weituoshu" attrs="{'readonly':[('state','=','draft')]}" />	
-						<field name="xieyicaoan" attrs="{'readonly':[('state','=','draft')]}" />		
-						<field name="koutouyaoqiujilu" attrs="{'readonly':[('state','=','draft')]}" />
-					</group>
-					<!-- <group string="通知设置">
-						<field name="send_email" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="send_sms" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-					</group> -->
-					<group string="Review Comment">
-						<field name="review_log" />
-						<field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_suozhang)d)]"  attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-						<field name="comment" />
-					</group>
-					<footer>
-						<button name="suozhangshenpi_review_submit" string="提交所长审批" states="draft" class="oe_highlight"/>
-						<button name="suozhangshenpi_review_accept" string="审批通过" states="submitted" class="oe_highlight"/>
-						<button name="suozhangshenpi_review_reject" string="打回" states="submitted" class="oe_highlight"/>
-						<button string="Cancel" class="oe_link" special="cancel"/>
-					</footer>
-				</form>
-			</field>
-		</record>
-		<!-- <record id="suozhangshenpi_form_view" model="ir.ui.view">			
-			<field name="name">suozhangshenpi.form.view</field>
-			<field name="model">project.suozhangshenpi</field>
-			<field name="arch" type="xml">
-				<form string="suozhangshenpi" version="7.0">
-					<group string="基本信息" col="4">
-						<field name="guimo"/>
-						<field name="jianyishejibumen_id"/>
-						<field name="jianyixiangmufuzeren_id"/>
-						<field name="jiafang_id"/>	
-						<field name="waibao"/>
-						<field name="shizhenpeitao"/>
-						<field name="duofanghetong"/>
-					</group>
-					<group string="Review Comment">
-						<field name="comment" />
-					</group>
-					<footer>
-						<button name="accept" string="提交" type="object" class="oe_highlight"/>
-						<button name="reject" string="打回" type="object" class="oe_highlight"/>
-						<button string="Cancel" class="oe_link" special="cancel"/>
-					</footer>
-				</form>
-			</field>
-		</record>
-		<record id="suozhangshenpi_act" model="ir.actions.act_window">
-			<field name="name">所长审批</field>
-			<field name="res_model">project.suozhangshenpi</field>
-			<field name="view_type">form</field>
-			<field name="view_mode">form</field>
-			<field name="view_id" ref="suozhangshenpi_form_view" />
-			<field name="target">new</field>
-		</record>
-		<record id="tijiaojingyingshi_form_view" model="ir.ui.view">
-			<field name="name">tijiaojingyingshi.form.view</field>
-			<field name="model">project.tijiaojingyingshi</field>
-			<field name="arch" type="xml">
-				<form string="tijiaojingyingshi" version="7.0">
-					<group string="项目内容" col="4">						
-						<field name="yaoqiuxingchengwenjian"/>	
-						<field name="yinhanyaoqiu"/>	
-						<field name="difangfagui"/>		
-						<field name="fujiayaoqiu"/>		
-						<field name="hetongyizhi"/>	
-						<field name="ziyuan"/>		
-						<field name="shebei"/>		
-						<field name="gongqi"/>		
-						<field name="shejifei"/>	
-					</group>
-					<group string="通知设置">
-						<field name="send_email"/>
-						<field name="send_sms"/>
-					</group>
-					<group string="Review Comment">						
-						<field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_jingyingshi)d)]" />
-						<field name="comment" />
-					</group>
-					<footer>
-						<button name="submit" string="提交" type="object" class="oe_highlight"/>
-						Or
-						<button string="Cancel" class="oe_link" special="cancel"/>
-					</footer>
-				</form>
-			</field>
-		</record>
-		<record id="tijiaojingyingshi_act" model="ir.actions.act_window">
-			<field name="name">提交经营室</field>
-			<field name="res_model">project.tijiaojingyingshi</field>
-			<field name="view_type">form</field>
-			<field name="view_mode">form</field>
-			<field name="view_id" ref="tijiaojingyingshi_form_view" />
-			<field name="target">new</field>
-		</record> -->
-	</data>
+    <data>
+        <record id="project_prject_suozhangshenpi_form_inherit" model="ir.ui.view">
+            <field name="name">project.project.suozhangshenpi.form.inherit</field>
+            <field name="model">project.project</field>
+            <field name="inherit_id" ref="edit_project_inherit"/>
+            <field name="arch" type="xml">
+                <xpath expr="//group[@name='basic_info']" position="after">
+                    <group string="Review">
+                        <field name="yaoqiuxingchengwenjian" readonly="1"/>
+                        <field name="hetongyizhi" readonly="1"/>
+                    </group>
+                    <newline/>
+                    <group string="设计要求是否达到规定">
+                        <field name="express_requirement" readonly="1"/>
+                        <field name="yinhanyaoqiu" readonly="1"/>
+                        <field name="difangfagui" readonly="1"/>
+                        <field name="fujiayaoqiu" readonly="1"/>
+                    </group>
+                    <group string="Attachment">
+
+                    </group>
+                    <group string="本院是否有能力满足规定要求">
+                        <field name="ziyuan" readonly="1"/>
+                        <field name="shebei" readonly="1"/>
+                        <field name="gongqi" readonly="1"/>
+                        <field name="shejifei" readonly="1"/>
+                    </group>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="project_review_suozhangshenpi_form_form_view" model="ir.ui.view">
+            <field name="name">project.review.suozhangshenpi.form.view</field>
+            <field name="model">project.review.suozhangshenpi.form</field>
+            <field name="arch" type="xml">
+                <form string="suozhangshenpi" version="7.0">
+                    <field name="state" widget="statusbar" readonly="1"/>
+                    <group string="Review">
+                        <field name="yaoqiuxingchengwenjian" attrs="{'readonly':[('state','!=','draft')]}"/>
+                        <field name="hetongyizhi" attrs="{'readonly':[('state','!=','draft')]}"/>
+                    </group>
+                    <newline/>
+                    <group string="设计要求是否达到规定">
+                        <field name="express_requirement" attrs="{'readonly':[('state','!=','draft')]}"/>
+                        <field name="yinhanyaoqiu" attrs="{'readonly':[('state','!=','draft')]}"/>
+                        <field name="difangfagui" attrs="{'readonly':[('state','!=','draft')]}"/>
+                        <field name="fujiayaoqiu" attrs="{'readonly':[('state','!=','draft')]}"/>
+                    </group>
+                    <group string="Attachment">
+
+                    </group>
+                    <group string="本院是否有能力满足规定要求">
+                        <field name="ziyuan" attrs="{'readonly':[('state','!=','draft')]}"/>
+                        <field name="shebei" attrs="{'readonly':[('state','!=','draft')]}"/>
+                        <field name="gongqi" attrs="{'readonly':[('state','!=','draft')]}"/>
+                        <field name="shejifei" attrs="{'readonly':[('state','!=','draft')]}"/>
+                    </group>
+                    <group>
+                        <field name="reviewer_id"/>
+                    </group>
+
+                    <footer>
+                        <button name="save"  class="oe_highlight" string="Save" states="draft"/>
+                        <button name="suozhangshenpi_review_submit" string="提交所长审批" states="draft"
+                                class="oe_highlight"/>
+                        <button name="suozhangshenpi_review_accept" string="审批通过" states="submitted"
+                                class="oe_highlight"/>
+                        <button name="suozhangshenpi_review_reject" string="打回" states="submitted"
+                                class="oe_highlight"/>
+                        <button string="Cancel" class="oe_link" special="cancel"/>
+                    </footer>
+                </form>
+            </field>
+        </record>
+        <!-- <record id="suozhangshenpi_form_view" model="ir.ui.view">
+            <field name="name">suozhangshenpi.form.view</field>
+            <field name="model">project.suozhangshenpi</field>
+            <field name="arch" type="xml">
+                <form string="suozhangshenpi" version="7.0">
+                    <group string="基本信息" col="4">
+                        <field name="guimo"/>
+                        <field name="jianyishejibumen_id"/>
+                        <field name="jianyixiangmufuzeren_id"/>
+                        <field name="jiafang_id"/>
+                        <field name="waibao"/>
+                        <field name="shizhenpeitao"/>
+                        <field name="duofanghetong"/>
+                    </group>
+                    <group string="Review Comment">
+                        <field name="comment" />
+                    </group>
+                    <footer>
+                        <button name="accept" string="提交" type="object" class="oe_highlight"/>
+                        <button name="reject" string="打回" type="object" class="oe_highlight"/>
+                        <button string="Cancel" class="oe_link" special="cancel"/>
+                    </footer>
+                </form>
+            </field>
+        </record>
+        <record id="suozhangshenpi_act" model="ir.actions.act_window">
+            <field name="name">所长审批</field>
+            <field name="res_model">project.suozhangshenpi</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="suozhangshenpi_form_view" />
+            <field name="target">new</field>
+        </record>
+        <record id="tijiaojingyingshi_form_view" model="ir.ui.view">
+            <field name="name">tijiaojingyingshi.form.view</field>
+            <field name="model">project.tijiaojingyingshi</field>
+            <field name="arch" type="xml">
+                <form string="tijiaojingyingshi" version="7.0">
+                    <group string="项目内容" col="4">
+                        <field name="yaoqiuxingchengwenjian"/>
+                        <field name="yinhanyaoqiu"/>
+                        <field name="difangfagui"/>
+                        <field name="fujiayaoqiu"/>
+                        <field name="hetongyizhi"/>
+                        <field name="ziyuan"/>
+                        <field name="shebei"/>
+                        <field name="gongqi"/>
+                        <field name="shejifei"/>
+                    </group>
+                    <group string="通知设置">
+                        <field name="send_email"/>
+                        <field name="send_sms"/>
+                    </group>
+                    <group string="Review Comment">
+                        <field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_jingyingshi)d)]" />
+                        <field name="comment" />
+                    </group>
+                    <footer>
+                        <button name="submit" string="提交" type="object" class="oe_highlight"/>
+                        Or
+                        <button string="Cancel" class="oe_link" special="cancel"/>
+                    </footer>
+                </form>
+            </field>
+        </record>
+        <record id="tijiaojingyingshi_act" model="ir.actions.act_window">
+            <field name="name">提交经营室</field>
+            <field name="res_model">project.tijiaojingyingshi</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="tijiaojingyingshi_form_view" />
+            <field name="target">new</field>
+        </record> -->
+    </data>
 </openerp>
