--- a/up_project/wizard/suozhangshenpi.xml
+++ b/up_project/wizard/suozhangshenpi.xml
@@ -62,7 +62,7 @@
 
                     <footer>
                         <button name="save" class="oe_highlight" string="Save" states=""/>
-                        <button name="suozhangshenpi_review_submit" string="提交所长审批" states=""
+                        <button name="suozhangshenpi_review_submit" string="提交所长审批" states="" type="object"
                                 class="oe_highlight"/>
                         <button string="Cancel" class="oe_link" special="cancel"/>
                     </footer>
