--- a/up_project/wizard/fuzerenqidong.xml
+++ b/up_project/wizard/fuzerenqidong.xml
@@ -1,39 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
-	<data>
-		<record id="project_review_fuzerenqidong_form_form_view" model="ir.ui.view">
-			<field name="name">project.review.fuzerenqidong.form.form.view</field>
-			<field name="model">project.review.fuzerenqidong.form</field>
-			<field name="arch" type="xml">
-				<form string="fuzerenqidongshenpi" version="7.0">
-					<field name="state" widget="statusbar" readonly="1" />
-					<group string="项目信息" col="4">
-						<field name="gongzuodagang" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="chuangyouxiangmu" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="zhuantihuozixiang" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="youfenbaofang" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-					</group>
-					<group string="人员分配">
-						<field name="shizhengxietiaoren_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="project_assignment_ids" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-					</group>
-					<!-- <group string="通知设置">
-						<field name="send_email" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="send_sms" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-					</group> -->
-					<group string="Review Comment">
-						<field name="review_log" />
-						<field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_jingyingshi)d)]"  attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-						<field name="comment" />
-					</group>
-					<footer>
-						<button name="fuzerenqidong_review_submit" string="提交经营室审批" states="draft" class="oe_highlight"/>
-						<button name="fuzerenqidong_review_accept" string="审批通过" states="submitted" class="oe_highlight"/>
-						<button name="fuzerenqidong_review_reject" string="打回" states="submitted" class="oe_highlight"/>
-						<button string="Cancel" class="oe_link" special="cancel"/>
-					</footer>
-				</form>
-			</field>
-		</record>
-	</data>
+    <data>
+        <record id="project_review_fuzerenqidong_form_form_view" model="ir.ui.view">
+            <field name="name">project.review.fuzerenqidong.form.form.view</field>
+            <field name="model">project.review.fuzerenqidong.form</field>
+            <field name="arch" type="xml">
+                <form string="fuzerenqidongshenpi" version="7.0">
+                    <group string="项目信息" col="4">
+                        <field name="gongzuodagang"/>
+                        <field name="chuangyouxiangmu"/>
+                        <field name="zhuantihuozixiang"/>
+                        <field name="youfenbaofang"/>
+                    </group>
+                    <group string="人员分配">
+                        <field name="shizhengxietiaoren_id"/>
+                        <field name="project_assignment_ids"/>
+                    </group>
+                    <!-- <group string="通知设置">
+                        <field name="send_email" />
+                        <field name="send_sms" />
+                    </group> -->
+                    <group string="Review Comment">
+                        <field name="review_log"/>
+                        <field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_jingyingshi)d)]"
+                                />
+                        <field name="comment"/>
+                    </group>
+                    <footer>
+                        <button name="save" class="oe_highlight" string="Save"/>
+                        <button name="fuzerenqidong_review_submit" string="启动" class="oe_highlight" type="object"/>
+                        <button string="Cancel" class="oe_link" special="cancel"/>
+                    </footer>
+                </form>
+            </field>
+        </record>
+
+        <record id="project_project_fuzerenqidong_form_inherit" model="ir.ui.view">
+            <field name="name">project.project.fuzerenqidong.form.inherit</field>
+            <field name="model">project.project</field>
+            <field name="inherit_id" ref="edit_project_inherit"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='state']" position="before">
+                    <button name="action_fuzerenqidong" string="负责人启动" states="fuzerenqidong" type="object"/>
+                    <button name="fuzeren_reject" string="打回申请单" states="fuzerenqidong"/>
+                </xpath>
+
+            </field>
+        </record>
+    </data>
 </openerp>
