--- a/up_project/wizard/jingyingshi.xml
+++ b/up_project/wizard/jingyingshi.xml
@@ -1,36 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
-	<data>
-		<record id="project_review_jingyingshishenpi_form_form_view" model="ir.ui.view">
-			<field name="name">project.review.jingyingshishenpi.form.form.view</field>
-			<field name="model">project.review.jingyingshishenpi.form</field>
-			<field name="arch" type="xml">
-				<form string="jingyingshishenpishenpi" version="7.0">
-					<field name="state" widget="statusbar" readonly="1" statusbar_visible="submitted,draft"/>
-					<group string="经营室指定设计部门" col="4">
-						<field name="xiangmubianhao" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="pingshenfangshi" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="yinfacuoshi" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="renwuyaoqiu" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="chenjiebumen_id" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-					</group>
-					<!-- <group string="通知设置">
-						<field name="send_email" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>	
-						<field name="send_sms" attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-					</group> -->
-					<group string="Review Comment">
-						<field name="review_log" />
-						<field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_jingyingshi)d)]"  attrs="{'readonly':[('state','&lt;&gt;','draft')]}"/>
-						<field name="comment" />
-					</group>
-					<footer>
-						<button name="jingyingshishenpi_review_submit" string="提交经营室审批" states="draft" class="oe_highlight"/>
-						<button name="jingyingshishenpi_review_accept" string="审批通过" states="submitted" class="oe_highlight"/>
-						<button name="jingyingshishenpi_review_reject" string="打回" states="submitted" class="oe_highlight"/>
-						<button string="Cancel" class="oe_link" special="cancel"/>
-					</footer>
-				</form>
-			</field>
-		</record>
-	</data>
+    <data>
+        <record id="project_review_jingyingshishenpi_form_form_view" model="ir.ui.view">
+            <field name="name">project.review.jingyingshishenpi.form.view</field>
+            <field name="model">project.review.jingyingshishenpi.form</field>
+            <field name="arch" type="xml">
+                <form string="jingyingshishenpishenpi" version="7.0">
+                    <group string="经营室指定设计部门" col="4">
+                        <field name="xiangmubianhao"/>
+                        <field name="pingshenfangshi"/>
+                        <field name="yinfacuoshi"/>
+                        <field name="renwuyaoqiu"/>
+                        <field name="chenjiebumen_id"/>
+                    </group>
+                    <!-- <group string="通知设置">
+                        <field name="send_email" />
+                        <field name="send_sms" />
+                    </group> -->
+                    <group string="Review Comment">
+                        <field name="review_log"/>
+                        <field name="reviewer_id" domain="[('groups_id','=',%(group_up_project_jingyingshi)d)]"/>
+                        <field name="comment"/>
+                    </group>
+                    <footer>
+                        <button name="save" class="oe_highlight" string="Save"/>
+                        <button name="jingyinshi_review_submit" string="提交总师室审批" class="oe_highlight"
+                                type="object"/>
+                        <button string="Cancel" class="oe_link" special="cancel"/>
+                    </footer>
+                </form>
+            </field>
+        </record>
+
+        <record id="project_project_jingyinshi_form_inherit" model="ir.ui.view">
+            <field name="name">project.project.jingyingshishenpi.form.inherit</field>
+            <field name="model">project.project</field>
+            <field name="inherit_id" ref="edit_project_inherit"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='state']" position="before">
+                    <button name="action_jingyingshishenpi" string="经营室审批申请单" states="zhidingbumen"
+                            type="object"/>
+                    <button name="suozhangshenpi_reject" string="打回申请单" states="zhidingbumen"/>
+                </xpath>
+
+            </field>
+        </record>
+
+    </data>
 </openerp>
+
+
